welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:20: error: ';' expected but 'else' found.
		else if (estFaceMur && getMondeHauteur < diag && diag < getMondeHauteur * getMondeLargeur)
                ^Diagonal:30: error: ';' expected but 'else' found.
		else 
                ^Diagonal:43: error: expected start of definition
	override def forward(i:Int)  { 
                 ^Diagonal:46: error: expected start of definition
	override def forward()  {
                 ^Diagonal:49: error: expected start of definition
	override def backward(i:Int) {
                 ^Diagonal:52: error: expected start of definition
	override def backward() {
                 ^Diagonal:55: error: Unmatched closing brace '}' ignored here
}
^