welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.code
var diag = 0;
override def run() {
	var x = 0 
	var y = 0
	var num = 0
	
	while (diag != 12)
	{
		if (estFaceMur && 0 < diag && diag < getMondeHauteur + 1)
		{
			diag = diag + 1
			x = 0 
			y = diag - 1  
			setPos(x , y )
		}	

		droite ; 

		
		else if (estFaceMur && getMondeHauteur < diag && diag < getMondeHauteur * getMondeLargeur)
		{
				x = diag - getMondeHauteur
				y = getMondeHauteur - 1   
				setPos(x , y )
		}

		gauche ; 
			
		}
		else 
		{
		
		y = y - 1
			x = x + 1
			setPos(x , y )
		}
		
	}
}
